--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            Hi there!
+            Hi there! It's good so far
         </h1>
     </body>
 </html>
