--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Module 2 Solution</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Module 2 Solution</title>
+    <link rel="stylesheet" href="css/module2.css">
+</head>
 
 <body>
-    <h1>Some Placeholder text</h1>
+    <h1>RPG Character Classes</h1>
 
+    <div class="row">
+        <section class="col-desktop-4 col-tablet-6">
+            <div class="content">
+                <div class="title">Fighter</div>
+                <p class="description">A warrior with a mastery of various weapons, who is unafraid to jump directly
+                    into
+                    the fray. Excellent at keeping the attention of enemies.</p>
+            </div>
+        </section>
+        <section class="col-desktop-4 col-tablet-6">
+            <div class="content">
+                <div class="title">Ranger</div>
+                <p class="description">A skilled tracker who thrives in the wilderness. Able to call beasts to their aid
+                    and
+                    often skilled with a bow or other ranged weaponry.</p>
+            </div>
+        </section>
+        <section class="col-desktop-4 col-tablet-12">
+            <div class="content">
+                <div class="title">Wizard</div>
+                <p class="description">A master of arcane magic, utilizing their wits and wisdom to conjure
+                    reality-bending phenomena. Best kept at a distance.</p>
+            </div>
+        </section>
+    </div>
+    
 </body>
