Responsive Layout Complete

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -14,7 +14,7 @@
     <div class="row">
         <section class="col-desktop-4 col-tablet-6">
             <div class="content">
-                <div class="title">Fighter</div>
+                <div class="title" id="title1">Fighter</div>
                 <p class="description">A warrior with a mastery of various weapons, who is unafraid to jump directly
                     into
                     the fray. Excellent at keeping the attention of enemies.</p>
@@ -22,7 +22,7 @@
         </section>
         <section class="col-desktop-4 col-tablet-6">
             <div class="content">
-                <div class="title">Ranger</div>
+                <div class="title" id="title2">Ranger</div>
                 <p class="description">A skilled tracker who thrives in the wilderness. Able to call beasts to their aid
                     and
                     often skilled with a bow or other ranged weaponry.</p>
@@ -30,9 +30,9 @@
         </section>
         <section class="col-desktop-4 col-tablet-12">
             <div class="content">
-                <div class="title">Wizard</div>
+                <div class="title" id="title3">Wizard</div>
                 <p class="description">A master of arcane magic, utilizing their wits and wisdom to conjure
-                    reality-bending phenomena. Best kept at a distance.</p>
+                    reality-bending phenomena. Best kept at a distance, for everyone's safety.</p>
             </div>
         </section>
     </div>
