--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="#">
                     <h1>Food, LLC</h1>
                 </a>
-                <nav class="navbar d-sm-none">
+                <nav class="navbar d-md-none">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbar-expanded" aria-controls="navbar-expanded" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             </div> <!-- End Header Container -->
         </nav>
 
-        <div class="collapse navbar-collapse d-sm-none" id="navbar-expanded">
+        <div class="collapse navbar-collapse d-md-none" id="navbar-expanded">
             <ul class="nav flex-column">
                 <span class="menu-row text-center fs-5">Chicken</span>
                 <span class="menu-row text-center fs-5">Beef</span>
